feat: added popular-equipment

--- a/scss/_l-popular-equipment.scss
+++ b/scss/_l-popular-equipment.scss
@@ -1,2 +1,207 @@
 .popular-equipment {
+  padding: 62px 0 123px;
+
+  @include laptop {
+    padding: 40px 0 100px;
+  }
+
+  @include mobile {
+    padding: 25px 0 72px;
+  }
+
+  &__container {
+    max-width: 1570px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+  }
+
+  &__title {
+    max-width: 806px;
+    margin: 0 auto 100px;
+    font-weight: 700;
+    font-size: 41px;
+    line-height: 130%;
+    text-align: center;
+    color: #8b928b;
+
+    @include laptop {
+      margin-bottom: 64px;
+      font-size: 36px;
+    }
+
+    @include mobile {
+      margin-bottom: 36px;
+      font-size: 31px;
+    }
+  }
+
+  &__cards {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
+    gap: 50px;
+
+    @include desktop {
+      gap: 20px;
+    }
+  }
+
+  &__card {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 calc(100% / 3 - 50px / 3 * 2);
+    padding: 40px 40px 45px;
+    box-sizing: border-box;
+    border-radius: 25px;
+    box-shadow: 24px 24px 54px 0 rgba(82, 47, 105, 0.14);
+    background-color: #fff;
+
+    @include desktop {
+      flex: 0 0 calc(100% / 3 - 20px / 3 * 2);
+    }
+
+    @include laptop {
+      flex: 0 0 calc(100% / 2 - 20px / 2);
+    }
+
+    @include mobile {
+      flex: 0 1 360px;
+      padding: 30px 48px;
+    }
+
+    &-title {
+      margin: 0;
+      font-weight: 800;
+      font-size: 34px;
+      line-height: 110%;
+      color: #522f69;
+
+      @include desktop {
+        font-size: 28px;
+      }
+
+      @include laptop {
+        font-size: 24px;
+      }
+
+      @include mobile {
+        font-size: 20px;
+      }
+    }
+
+    &-text {
+      flex: 1 1 auto;
+      margin: 15px 0 0;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 110%;
+      letter-spacing: -0.04em;
+      color: #522f69;
+
+      @include laptop {
+        font-size: 16px;
+      }
+
+      @include mobile {
+        font-size: 14px;
+      }
+    }
+
+    &-figure {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 17px 0 0;
+
+      &-image {
+        display: block;
+        max-width: 100%;
+        height: auto;
+      }
+    }
+
+    &-more {
+      margin: 42px 0 0;
+
+      @include mobile {
+        margin: 28px 0 0;
+      }
+
+      &-link {
+        position: relative;
+        display: flex;
+        align-items: center;
+        width: fit-content;
+        gap: 8px;
+        padding: 0 0 13px;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 100%;
+        letter-spacing: -0.04em;
+        color: #9985b8;
+        text-decoration: none;
+        transition: color ease-out 0.2s;
+
+        @include laptop {
+          padding-bottom: 10px;
+          font-size: 20px;
+        }
+
+        @include mobile {
+          gap: 4px;
+          padding-bottom: 8px;
+          font-size: 14px;
+        }
+
+        &:hover {
+          color: #522f69;
+        }
+
+        &::before {
+          content: '';
+          position: absolute;
+          left: 0;
+          right: 32px;
+          bottom: 0;
+          display: block;
+          height: 1px;
+          background-color: #9985b8;
+          transition-property: right, background-color;
+          transition-timing-function: ease-out;
+          transition-duration: 0.2s;
+
+          @include mobile {
+            right: 20px;
+          }
+        }
+
+        &:hover::before {
+          right: 0;
+        }
+
+        &::after {
+          content: '';
+          display: block;
+          width: 24px;
+          aspect-ratio: 1;
+          background: url(../assets/angle-right.svg) center / cover no-repeat;
+          transition-property: filter;
+          transition-timing-function: ease-out;
+          transition-duration: 0.2s;
+
+          @include mobile {
+            width: 16px;
+            background-size: 150%;
+          }
+        }
+
+        &:hover::after {
+          filter: brightness(50%);
+        }
+      }
+    }
+  }
 }
