--- a/css/index.css
+++ b/css/index.css
@@ -18,3 +18,269 @@ input,
 textarea {
   font-family: "Montserrat", sans-serif;
 }
+
+.popular-equipment {
+  padding: 62px 0 123px;
+}
+@media (max-width: 1024px) {
+  .popular-equipment {
+    padding: 40px 0 100px;
+  }
+}
+@media (max-width: 576px) {
+  .popular-equipment {
+    padding: 25px 0 72px;
+  }
+}
+.popular-equipment__container {
+  max-width: 1570px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.popular-equipment__title {
+  max-width: 806px;
+  margin: 0 auto 100px;
+  font-weight: 700;
+  font-size: 41px;
+  line-height: 130%;
+  text-align: center;
+  color: #8b928b;
+}
+@media (max-width: 1024px) {
+  .popular-equipment__title {
+    margin-bottom: 64px;
+    font-size: 36px;
+  }
+}
+@media (max-width: 576px) {
+  .popular-equipment__title {
+    margin-bottom: 36px;
+    font-size: 31px;
+  }
+}
+.popular-equipment__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 50px;
+}
+@media (max-width: 1440px) {
+  .popular-equipment__cards {
+    gap: 20px;
+  }
+}
+.popular-equipment__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 calc(33.3333333333% - 33.3333333333px);
+          flex: 0 0 calc(33.3333333333% - 33.3333333333px);
+  padding: 40px 40px 45px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 25px;
+  -webkit-box-shadow: 24px 24px 54px 0 rgba(82, 47, 105, 0.14);
+          box-shadow: 24px 24px 54px 0 rgba(82, 47, 105, 0.14);
+  background-color: #fff;
+}
+@media (max-width: 1440px) {
+  .popular-equipment__card {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 calc(33.3333333333% - 13.3333333333px);
+            flex: 0 0 calc(33.3333333333% - 13.3333333333px);
+  }
+}
+@media (max-width: 1024px) {
+  .popular-equipment__card {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 calc(50% - 10px);
+            flex: 0 0 calc(50% - 10px);
+  }
+}
+@media (max-width: 576px) {
+  .popular-equipment__card {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 360px;
+            flex: 0 1 360px;
+    padding: 30px 48px;
+  }
+}
+.popular-equipment__card-title {
+  margin: 0;
+  font-weight: 800;
+  font-size: 34px;
+  line-height: 110%;
+  color: #522f69;
+}
+@media (max-width: 1440px) {
+  .popular-equipment__card-title {
+    font-size: 28px;
+  }
+}
+@media (max-width: 1024px) {
+  .popular-equipment__card-title {
+    font-size: 24px;
+  }
+}
+@media (max-width: 576px) {
+  .popular-equipment__card-title {
+    font-size: 20px;
+  }
+}
+.popular-equipment__card-text {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 15px 0 0;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 110%;
+  letter-spacing: -0.04em;
+  color: #522f69;
+}
+@media (max-width: 1024px) {
+  .popular-equipment__card-text {
+    font-size: 16px;
+  }
+}
+@media (max-width: 576px) {
+  .popular-equipment__card-text {
+    font-size: 14px;
+  }
+}
+.popular-equipment__card-figure {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 17px 0 0;
+}
+.popular-equipment__card-figure-image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.popular-equipment__card-more {
+  margin: 42px 0 0;
+}
+@media (max-width: 576px) {
+  .popular-equipment__card-more {
+    margin: 28px 0 0;
+  }
+}
+.popular-equipment__card-more-link {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  gap: 8px;
+  padding: 0 0 13px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: -0.04em;
+  color: #9985b8;
+  text-decoration: none;
+  -webkit-transition: color ease-out 0.2s;
+  transition: color ease-out 0.2s;
+}
+@media (max-width: 1024px) {
+  .popular-equipment__card-more-link {
+    padding-bottom: 10px;
+    font-size: 20px;
+  }
+}
+@media (max-width: 576px) {
+  .popular-equipment__card-more-link {
+    gap: 4px;
+    padding-bottom: 8px;
+    font-size: 14px;
+  }
+}
+.popular-equipment__card-more-link:hover {
+  color: #522f69;
+}
+.popular-equipment__card-more-link::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 32px;
+  bottom: 0;
+  display: block;
+  height: 1px;
+  background-color: #9985b8;
+  -webkit-transition-property: right, background-color;
+  transition-property: right, background-color;
+  -webkit-transition-timing-function: ease-out;
+          transition-timing-function: ease-out;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+}
+@media (max-width: 576px) {
+  .popular-equipment__card-more-link::before {
+    right: 20px;
+  }
+}
+.popular-equipment__card-more-link:hover::before {
+  right: 0;
+}
+.popular-equipment__card-more-link::after {
+  content: "";
+  display: block;
+  width: 24px;
+  aspect-ratio: 1;
+  background: url(../assets/angle-right.svg) center/cover no-repeat;
+  -webkit-transition-property: -webkit-filter;
+  transition-property: -webkit-filter;
+  transition-property: filter;
+  transition-property: filter, -webkit-filter;
+  -webkit-transition-timing-function: ease-out;
+          transition-timing-function: ease-out;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+}
+@media (max-width: 576px) {
+  .popular-equipment__card-more-link::after {
+    width: 16px;
+    background-size: 150%;
+  }
+}
+.popular-equipment__card-more-link:hover::after {
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
+}
+
+.full-range {
+  display: none;
+}
+
+.demonstration {
+  display: none;
+}
